api-parser/src/aidl/AIDLParser.ts
// Generated from ./src/grammar/AIDL.g4 by ANTLR 4.13.2
// noinspection ES6UnusedImports,JSUnusedGlobalSymbols,JSUnusedLocalSymbols

import {
  ATN,
  ATNDeserializer,
  type DecisionState,
  DFA,
  FailedPredicateException,
  NoViableAltException,
  Parser,
  ParserATNSimulator,
  ParserRuleContext,
  PredictionContextCache,
  RecognitionException,
  TerminalNode,
  Token,
  type TokenStream,
} from 'antlr4';
import AIDLListener from './AIDLListener.ts';
// for running tests with parameters, TODO: discuss strategy for typed parameters in CI
// eslint-disable-next-line no-unused-vars
type int = number;

export default class AIDLParser extends Parser {
  public static readonly T__0 = 1;
  public static readonly T__1 = 2;
  public static readonly PACKAGE = 3;
  public static readonly IMPORT = 4;
  public static readonly INTERFACE = 5;
  public static readonly EXTENDS = 6;
  public static readonly PARCELABLE = 7;
  public static readonly ENUM = 8;
  public static readonly ONEWAY = 9;
  public static readonly IN = 10;
  public static readonly OUT = 11;
  public static readonly INOUT = 12;
  public static readonly THROWS = 13;
  public static readonly CONST = 14;
  public static readonly CPP_HEADER = 15;
  public static readonly JAVA_HEADER = 16;
  public static readonly NDK_HEADER = 17;
  public static readonly RUST_HEADER = 18;
  public static readonly BYTE = 19;
  public static readonly SHORT = 20;
  public static readonly INT = 21;
  public static readonly LONG = 22;
  public static readonly CHAR = 23;
  public static readonly FLOAT = 24;
  public static readonly DOUBLE = 25;
  public static readonly BOOLEAN = 26;
  public static readonly STRING = 27;
  public static readonly BOOLEAN_LITERAL = 28;
  public static readonly NULL_LITERAL = 29;
  public static readonly IDENTIFIER = 30;
  public static readonly INTEGER_LITERAL = 31;
  public static readonly FLOATING_POINT_LITERAL = 32;
  public static readonly FLOAT_SUFFIX_LITERAL = 33;
  public static readonly CHARACTER_LITERAL = 34;
  public static readonly STRING_LITERAL = 35;
  public static readonly BLOCK_COMMENT = 36;
  public static readonly LINE_COMMENT = 37;
  public static readonly DOC_COMMENT = 38;
  public static readonly WS = 39;
  public static readonly BITWISE_OR = 40;
  public static readonly BITWISE_XOR = 41;
  public static readonly BITWISE_AND = 42;
  public static readonly EQUALS = 43;
  public static readonly NOT_EQUALS = 44;
  public static readonly LESS_EQUAL = 45;
  public static readonly GREATER_EQUAL = 46;
  public static readonly LEFT_SHIFT = 47;
  public static readonly RIGHT_SHIFT = 48;
  public static readonly UNSIGNED_RIGHT_SHIFT = 49;
  public static readonly PLUS = 50;
  public static readonly MINUS = 51;
  public static readonly MULTIPLY = 52;
  public static readonly DIVIDE = 53;
  public static readonly MODULO = 54;
  public static readonly LOGICAL_OR = 55;
  public static readonly LOGICAL_AND = 56;
  public static readonly LOGICAL_NOT = 57;
  public static readonly BITWISE_NOT = 58;
  public static readonly LESS = 59;
  public static readonly GREATER = 60;
  public static readonly LPAREN = 61;
  public static readonly RPAREN = 62;
  public static readonly LBRACE = 63;
  public static readonly RBRACE = 64;
  public static readonly LBRACKET = 65;
  public static readonly RBRACKET = 66;
  public static readonly SEMI = 67;
  public static readonly COMMA = 68;
  public static readonly DOT = 69;
  public static readonly AT = 70;
  public static readonly ASSIGN = 71;
  public static readonly COLON = 72;
  public static override readonly EOF = Token.EOF;
  public static readonly RULE_compilationUnit = 0;
  public static readonly RULE_packageDeclaration = 1;
  public static readonly RULE_importDeclaration = 2;
  public static readonly RULE_typeDeclaration = 3;
  public static readonly RULE_interfaceDeclaration = 4;
  public static readonly RULE_interfaceBody = 5;
  public static readonly RULE_nestedTypeDeclaration = 6;
  public static readonly RULE_parcelableDeclaration = 7;
  public static readonly RULE_parcelableBody = 8;
  public static readonly RULE_languageHeaders = 9;
  public static readonly RULE_languageHeader = 10;
  public static readonly RULE_fieldDeclaration = 11;
  public static readonly RULE_variableDeclarators = 12;
  public static readonly RULE_variableDeclarator = 13;
  public static readonly RULE_enumDeclaration = 14;
  public static readonly RULE_enumConstant = 15;
  public static readonly RULE_constDeclaration = 16;
  public static readonly RULE_constantDeclaration = 17;
  public static readonly RULE_methodDeclaration = 18;
  public static readonly RULE_parameterList = 19;
  public static readonly RULE_parameter = 20;
  public static readonly RULE_direction = 21;
  public static readonly RULE_annotation = 22;
  public static readonly RULE_annotationValues = 23;
  public static readonly RULE_annotationValue = 24;
  public static readonly RULE_annotationArray = 25;
  public static readonly RULE_type = 26;
  public static readonly RULE_primitiveType = 27;
  public static readonly RULE_genericType = 28;
  public static readonly RULE_typeArgument = 29;
  public static readonly RULE_typeList = 30;
  public static readonly RULE_qualifiedName = 31;
  public static readonly RULE_expression = 32;
  public static readonly RULE_logicalOrExpression = 33;
  public static readonly RULE_logicalAndExpression = 34;
  public static readonly RULE_bitwiseOrExpression = 35;
  public static readonly RULE_bitwiseXorExpression = 36;
  public static readonly RULE_bitwiseAndExpression = 37;
  public static readonly RULE_equalityExpression = 38;
  public static readonly RULE_relationalExpression = 39;
  public static readonly RULE_shiftExpression = 40;
  public static readonly RULE_additiveExpression = 41;
  public static readonly RULE_multiplicativeExpression = 42;
  public static readonly RULE_unaryExpression = 43;
  public static readonly RULE_primaryExpression = 44;
  public static readonly RULE_literal = 45;
  public static readonly RULE_attributes = 46;
  public static readonly literalNames: (string | null)[] = [
    null,
    "'?'",
    "'super'",
    "'package'",
    "'import'",
    "'interface'",
    "'extends'",
    "'parcelable'",
    "'enum'",
    "'oneway'",
    "'in'",
    "'out'",
    "'inout'",
    "'throws'",
    "'const'",
    "'cpp_header'",
    "'java_header'",
    "'ndk_header'",
    "'rust_header'",
    "'byte'",
    "'short'",
    "'int'",
    "'long'",
    "'char'",
    "'float'",
    "'double'",
    "'boolean'",
    "'String'",
    null,
    "'null'",
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    null,
    "'|'",
    "'^'",
    "'&'",
    "'=='",
    "'!='",
    "'<='",
    "'>='",
    "'<<'",
    "'>>'",
    "'>>>'",
    "'+'",
    "'-'",
    "'*'",
    "'/'",
    "'%'",
    "'||'",
    "'&&'",
    "'!'",
    "'~'",
    "'<'",
    "'>'",
    "'('",
    "')'",
    "'{'",
    "'}'",
    "'['",
    "']'",
    "';'",
    "','",
    "'.'",
    "'@'",
    "'='",
    "':'",
  ];
  public static readonly symbolicNames: (string | null)[] = [
    null,
    null,
    null,
    'PACKAGE',
    'IMPORT',
    'INTERFACE',
    'EXTENDS',
    'PARCELABLE',
    'ENUM',
    'ONEWAY',
    'IN',
    'OUT',
    'INOUT',
    'THROWS',
    'CONST',
    'CPP_HEADER',
    'JAVA_HEADER',
    'NDK_HEADER',
    'RUST_HEADER',
    'BYTE',
    'SHORT',
    'INT',
    'LONG',
    'CHAR',
    'FLOAT',
    'DOUBLE',
    'BOOLEAN',
    'STRING',
    'BOOLEAN_LITERAL',
    'NULL_LITERAL',
    'IDENTIFIER',
    'INTEGER_LITERAL',
    'FLOATING_POINT_LITERAL',
    'FLOAT_SUFFIX_LITERAL',
    'CHARACTER_LITERAL',
    'STRING_LITERAL',
    'BLOCK_COMMENT',
    'LINE_COMMENT',
    'DOC_COMMENT',
    'WS',
    'BITWISE_OR',
    'BITWISE_XOR',
    'BITWISE_AND',
    'EQUALS',
    'NOT_EQUALS',
    'LESS_EQUAL',
    'GREATER_EQUAL',
    'LEFT_SHIFT',
    'RIGHT_SHIFT',
    'UNSIGNED_RIGHT_SHIFT',
    'PLUS',
    'MINUS',
    'MULTIPLY',
    'DIVIDE',
    'MODULO',
    'LOGICAL_OR',
    'LOGICAL_AND',
    'LOGICAL_NOT',
    'BITWISE_NOT',
    'LESS',
    'GREATER',
    'LPAREN',
    'RPAREN',
    'LBRACE',
    'RBRACE',
    'LBRACKET',
    'RBRACKET',
    'SEMI',
    'COMMA',
    'DOT',
    'AT',
    'ASSIGN',
    'COLON',
  ];
  // tslint:disable:no-trailing-whitespace
  public static readonly ruleNames: string[] = [
    'compilationUnit',
    'packageDeclaration',
    'importDeclaration',
    'typeDeclaration',
    'interfaceDeclaration',
    'interfaceBody',
    'nestedTypeDeclaration',
    'parcelableDeclaration',
    'parcelableBody',
    'languageHeaders',
    'languageHeader',
    'fieldDeclaration',
    'variableDeclarators',
    'variableDeclarator',
    'enumDeclaration',
    'enumConstant',
    'constDeclaration',
    'constantDeclaration',
    'methodDeclaration',
    'parameterList',
    'parameter',
    'direction',
    'annotation',
    'annotationValues',
    'annotationValue',
    'annotationArray',
    'type',
    'primitiveType',
    'genericType',
    'typeArgument',
    'typeList',
    'qualifiedName',
    'expression',
    'logicalOrExpression',
    'logicalAndExpression',
    'bitwiseOrExpression',
    'bitwiseXorExpression',
    'bitwiseAndExpression',
    'equalityExpression',
    'relationalExpression',
    'shiftExpression',
    'additiveExpression',
    'multiplicativeExpression',
    'unaryExpression',
    'primaryExpression',
    'literal',
    'attributes',
  ];
  public get grammarFileName(): string {
    return 'AIDL.g4';
  }
  public get literalNames(): (string | null)[] {
    return AIDLParser.literalNames;
  }
  public get symbolicNames(): (string | null)[] {
    return AIDLParser.symbolicNames;
  }
  public get ruleNames(): string[] {
    return AIDLParser.ruleNames;
  }
  public get serializedATN(): number[] {
    return AIDLParser._serializedATN;
  }

  protected createFailedPredicateException(
    predicate?: string,
    message?: string,
  ): FailedPredicateException {
    return new FailedPredicateException(this, predicate, message);
  }

  constructor(input: TokenStream) {
    super(input);
    this._interp = new ParserATNSimulator(
      this,
      AIDLParser._ATN,
      AIDLParser.DecisionsToDFA,
      new PredictionContextCache(),
    );
  }
  // @RuleVersion(0)
  public compilationUnit(): CompilationUnitContext {
    let localctx: CompilationUnitContext = new CompilationUnitContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 0, AIDLParser.RULE_compilationUnit);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 95;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 3) {
          {
            this.state = 94;
            this.packageDeclaration();
          }
        }

        this.state = 100;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (_la === 4) {
          {
            {
              this.state = 97;
              this.importDeclaration();
            }
          }
          this.state = 102;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 104;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
          {
            {
              this.state = 103;
              this.typeDeclaration();
            }
          }
          this.state = 106;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        } while (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 17312) !== 0) ||
          _la === 70
        );
        this.state = 108;
        this.match(AIDLParser.EOF);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public packageDeclaration(): PackageDeclarationContext {
    let localctx: PackageDeclarationContext = new PackageDeclarationContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 2, AIDLParser.RULE_packageDeclaration);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 110;
        this.match(AIDLParser.PACKAGE);
        this.state = 111;
        this.qualifiedName();
        this.state = 112;
        this.match(AIDLParser.SEMI);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public importDeclaration(): ImportDeclarationContext {
    let localctx: ImportDeclarationContext = new ImportDeclarationContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 4, AIDLParser.RULE_importDeclaration);
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 114;
        this.match(AIDLParser.IMPORT);
        this.state = 115;
        this.qualifiedName();
        this.state = 116;
        this.match(AIDLParser.SEMI);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public typeDeclaration(): TypeDeclarationContext {
    let localctx: TypeDeclarationContext = new TypeDeclarationContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 6, AIDLParser.RULE_typeDeclaration);
    try {
      this.state = 122;
      this._errHandler.sync(this);
      switch (this._interp.adaptivePredict(this._input, 3, this._ctx)) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 118;
            this.interfaceDeclaration();
          }
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 119;
            this.parcelableDeclaration();
          }
          break;
        case 3:
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 120;
            this.enumDeclaration();
          }
          break;
        case 4:
          this.enterOuterAlt(localctx, 4);
          {
            this.state = 121;
            this.constDeclaration();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public interfaceDeclaration(): InterfaceDeclarationContext {
    let localctx: InterfaceDeclarationContext = new InterfaceDeclarationContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 8, AIDLParser.RULE_interfaceDeclaration);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 125;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 70) {
          {
            this.state = 124;
            this.attributes();
          }
        }

        this.state = 128;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 9) {
          {
            this.state = 127;
            localctx._oneway = this.match(AIDLParser.ONEWAY);
          }
        }

        this.state = 130;
        this.match(AIDLParser.INTERFACE);
        this.state = 131;
        localctx._name = this.match(AIDLParser.IDENTIFIER);
        this.state = 134;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 6) {
          {
            this.state = 132;
            this.match(AIDLParser.EXTENDS);
            this.state = 133;
            localctx._extendedInterfaces = this.typeList();
          }
        }

        this.state = 136;
        this.match(AIDLParser.LBRACE);
        this.state = 137;
        this.interfaceBody();
        this.state = 138;
        this.match(AIDLParser.RBRACE);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public interfaceBody(): InterfaceBodyContext {
    let localctx: InterfaceBodyContext = new InterfaceBodyContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 10, AIDLParser.RULE_interfaceBody);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 145;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 1341670272) !== 0) ||
          _la === 70
        ) {
          {
            this.state = 143;
            this._errHandler.sync(this);
            switch (this._interp.adaptivePredict(this._input, 7, this._ctx)) {
              case 1:
                {
                  this.state = 140;
                  this.constantDeclaration();
                }
                break;
              case 2:
                {
                  this.state = 141;
                  this.methodDeclaration();
                }
                break;
              case 3:
                {
                  this.state = 142;
                  this.nestedTypeDeclaration();
                }
                break;
            }
          }
          this.state = 147;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public nestedTypeDeclaration(): NestedTypeDeclarationContext {
    let localctx: NestedTypeDeclarationContext =
      new NestedTypeDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 12, AIDLParser.RULE_nestedTypeDeclaration);
    try {
      this.state = 151;
      this._errHandler.sync(this);
      switch (this._interp.adaptivePredict(this._input, 9, this._ctx)) {
        case 1:
          this.enterOuterAlt(localctx, 1);
          {
            this.state = 148;
            this.parcelableDeclaration();
          }
          break;
        case 2:
          this.enterOuterAlt(localctx, 2);
          {
            this.state = 149;
            this.enumDeclaration();
          }
          break;
        case 3:
          this.enterOuterAlt(localctx, 3);
          {
            this.state = 150;
            this.constDeclaration();
          }
          break;
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public parcelableDeclaration(): ParcelableDeclarationContext {
    let localctx: ParcelableDeclarationContext =
      new ParcelableDeclarationContext(this, this._ctx, this.state);
    this.enterRule(localctx, 14, AIDLParser.RULE_parcelableDeclaration);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 154;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 70) {
          {
            this.state = 153;
            this.attributes();
          }
        }

        this.state = 156;
        this.match(AIDLParser.PARCELABLE);
        this.state = 157;
        localctx._name = this.qualifiedName();
        this.state = 167;
        this._errHandler.sync(this);
        switch (this._input.LA(1)) {
          case 63:
            {
              this.state = 158;
              this.parcelableBody();
            }
            break;
          case 6:
          case 15:
          case 16:
          case 17:
          case 18:
          case 67:
            {
              {
                this.state = 160;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if ((_la & ~0x1f) === 0 && ((1 << _la) & 491520) !== 0) {
                  {
                    this.state = 159;
                    this.languageHeaders();
                  }
                }

                this.state = 164;
                this._errHandler.sync(this);
                _la = this._input.LA(1);
                if (_la === 6) {
                  {
                    this.state = 162;
                    this.match(AIDLParser.EXTENDS);
                    this.state = 163;
                    localctx._superType = this.qualifiedName();
                  }
                }

                this.state = 166;
                this.match(AIDLParser.SEMI);
              }
            }
            break;
          default:
            throw new NoViableAltException(this);
        }
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public parcelableBody(): ParcelableBodyContext {
    let localctx: ParcelableBodyContext = new ParcelableBodyContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 16, AIDLParser.RULE_parcelableBody);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 169;
        this.match(AIDLParser.LBRACE);
        this.state = 174;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        while (
          ((_la & ~0x1f) === 0 && ((1 << _la) & 1341669760) !== 0) ||
          _la === 70
        ) {
          {
            this.state = 172;
            this._errHandler.sync(this);
            switch (this._interp.adaptivePredict(this._input, 14, this._ctx)) {
              case 1:
                {
                  this.state = 170;
                  this.fieldDeclaration();
                }
                break;
              case 2:
                {
                  this.state = 171;
                  this.nestedTypeDeclaration();
                }
                break;
            }
          }
          this.state = 176;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        }
        this.state = 177;
        this.match(AIDLParser.RBRACE);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public languageHeaders(): LanguageHeadersContext {
    let localctx: LanguageHeadersContext = new LanguageHeadersContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 18, AIDLParser.RULE_languageHeaders);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 180;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        do {
          {
            {
              this.state = 179;
              this.languageHeader();
            }
          }
          this.state = 182;
          this._errHandler.sync(this);
          _la = this._input.LA(1);
        } while ((_la & ~0x1f) === 0 && ((1 << _la) & 491520) !== 0);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public languageHeader(): LanguageHeaderContext {
    let localctx: LanguageHeaderContext = new LanguageHeaderContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 20, AIDLParser.RULE_languageHeader);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 184;
        localctx._headerType = this._input.LT(1);
        _la = this._input.LA(1);
        if (!((_la & ~0x1f) === 0 && ((1 << _la) & 491520) !== 0)) {
          localctx._headerType = this._errHandler.recoverInline(this);
        } else {
          this._errHandler.reportMatch(this);
          this.consume();
        }
        this.state = 185;
        localctx._headerValue = this.match(AIDLParser.STRING_LITERAL);
      }
    } catch (re) {
      if (re instanceof RecognitionException) {
        localctx.exception = re;
        this._errHandler.reportError(this, re);
        this._errHandler.recover(this, re);
      } else {
        throw re;
      }
    } finally {
      this.exitRule();
    }
    return localctx;
  }
  // @RuleVersion(0)
  public fieldDeclaration(): FieldDeclarationContext {
    let localctx: FieldDeclarationContext = new FieldDeclarationContext(
      this,
      this._ctx,
      this.state,
    );
    this.enterRule(localctx, 22, AIDLParser.RULE_fieldDeclaration);
    let _la: number;
    try {
      this.enterOuterAlt(localctx, 1);
      {
        this.state = 188;
        this._errHandler.sync(this);
        _la = this._input.LA(1);
        if (_la === 70) {
          {
            this.state = 187;
            this.attributes();
          }
        }
